Corrects measurement insertion URL
We can't use File#absolutePath when the file is not URL-encodable. Use
file.toURI().toURL()